# 2-Kreshchenko

./: .gitignore  .gitignore.txt  2Kreshechenko.rar  CMakeLists.txt  mainwindow.cpp  mainwindow.h
